# SIRIUS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  INSTALLATION.md  ROADMAP.md
src/sirius/: __init__.py  app.py  config.py  logging_setup.py  main.py  run.py  runtime.py
src/sirius/agents/: base.py  files_agent.py  knowledge_agent.py  memory_agent.py  notes_agent.py  orchestrator.py  research_agent.py  study_agent.py  task_agent.py  utility_agent.py
src/sirius/api/: deps.py  routes.py  schemas.py
src/sirius/db/: database.py  models.py
src/sirius/files/: service.py
src/sirius/knowledge/: service.py
src/sirius/llm/: anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_compat.py  router.py
src/sirius/memory/: manager.py  store.py
src/sirius/notes/: service.py
src/sirius/prompts/: system.py
src/sirius/study/: service.py
src/sirius/tasks/: scheduler.py  service.py
src/sirius/telegram/: bot.py
src/sirius/utils/: calculator.py  crypto.py  python_runner.py
src/sirius/web/: search.py
tests/: conftest.py  test_knowledge.py  test_memory.py  test_notes.py  test_openai_compat.py  test_orchestrator.py  test_router.py  test_tasks.py  test_tools.py
