[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sirius"
version = "0.1.0"
description = "Sirius - a personal AI assistant, second brain, and life operating system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "chromadb>=0.5",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-telegram-bot>=21.3",
    "apscheduler>=3.10,<4",
    "loguru>=0.7",
    "pypdf>=4.2",
    "cryptography>=42",
    "ddgs>=9.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]
postgres = [
    "psycopg[binary]>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses calls in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header"]
